--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "node test/functions.test.js | tap-spec",
+    "test": "tape test/*.test.js | tap-spec",
     "start": "node src/server.js",
     "lint": "eslint ."
   },
